[package]
name = "deck_codes"
version = "0.2.1"
description = "A library for decoding and encoding Hearthstone's deck code format"
keywords = ["Hearthstone"]
authors = ["Arran France <arran@arranfrance.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/arranf/deck_codes"

[dependencies]
integer-encoding = "1.0.7"
base64 = "0.11.0"
custom_error = "1.7.1"