[package]
name = "deck_codes"
version = "0.2.2"
description = "A library for decoding and encoding Hearthstone's deck code format"
keywords = ["Hearthstone"]
authors = ["Arran France <arran@arranfrance.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/arranf/deck_codes"

[dependencies]
integer-encoding = "3.0.2"
base64 = "0.13.0"
thiserror = "1.0"